# daily_coding_problems

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  conanfile.txt  main.cpp
13_09_2019/: CMakeLists.txt  code_solution.cpp  code_solution.h
13_09_2019/tests/: CMakeLists.txt  test_13_09_2019.cpp
